--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1034,14 +1034,14 @@
                                             <td></td>
                                             <td class="fc-event-container">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">5:30 pm</div>
+                                                    <div class="fc-time mbl">L 5-4</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />at Greenup County</span>
                                                     <p>
                                                         <span class="fc-location mts">Greenup HS</span>
                                                     </p>
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">Game 2</div>
+                                                    <div class="fc-time mbl">W 11-7</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />at Greenup County</span>
                                                     <p>
                                                         <span class="fc-location mts">Greenup HS</span>
@@ -1050,7 +1050,7 @@
                                             </td>
                                             <td class="fc-event-container">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">5:30 pm</div>
+                                                    <div class="fc-time mbl">5:00 pm</div>
                                                     <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
