--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1033,14 +1033,14 @@
                                             </td>
                                             <td></td>
                                             <td class="fc-event-container">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb10a6a8ee001f5b71cd" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">L 5-4</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />at Greenup County</span>
                                                     <p>
                                                         <span class="fc-location mts">Greenup HS</span>
                                                     </p>
                                                 </a>
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb3dc08689001a97af3b" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">W 11-7</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />at Greenup County</span>
                                                     <p>
