--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1330,13 +1330,25 @@
                                                         <span class="fc-location mts">Wheeling, WV</span>
                                                     </p>
                                                 </a>
-                                            </td>
-                                            <td class="fc-event-container">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://www.beastoftheeast.org/" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl"></div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />at Beast of the East</span>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
                                                     <p>
-                                                        <span class="fc-location mts">Wheeling, WV</span>
+                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                    </p>
+                                                </a>
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">3:30 pm</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                    </p>
+                                                </a>
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 pm</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs TBD</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
                                                     </p>
                                                 </a>
                                             </td>
@@ -1346,6 +1358,43 @@
                                                     <span class="fc-title">Chillicothe Post 757 <br />at Beast of the East</span>
                                                     <p>
                                                         <span class="fc-location mts">Wheeling, WV</span>
+                                                    </p>
+                                                </a>
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">3:30 pm</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                    </p>
+                                                </a>
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">3:30 pm</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                    </p>
+                                                </a>
+                                            </td>
+                                            <td class="fc-event-container">
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://www.beastoftheeast.org/" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl"></div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />at Beast of the East</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Wheeling, WV</span>
+                                                    </p>
+                                                </a>
+                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/cXX7KySxKBP2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">8:00 am</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs West Hills Baseball</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Shadyside, OH</span>
+                                                    </p>
+                                                </a>
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/cXX7KySxKBP2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">10:30 am</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs  Wheeling Post 1</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Shadyside, OH</span>
                                                     </p>
                                                 </a>
                                             </td>
