--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1338,13 +1338,6 @@
                                                     </p>
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">3:30 pm</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
-                                                    </p>
-                                                </a>
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">6:00 pm</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />vs TBD</span>
                                                     <p>
@@ -1361,15 +1354,15 @@
                                                     </p>
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">3:30 pm</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
+                                                    <div class="fc-time mbl">10:30 pm</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Ohio Bruisers Post 151</span>
                                                     <p>
                                                         <span class="fc-location mts">Garden Park Wheeling, WV</span>
                                                     </p>
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">3:30 pm</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
+                                                    <div class="fc-time mbl">6:00 pm</div>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Jr. Independent Players</span>
                                                     <p>
                                                         <span class="fc-location mts">Garden Park Wheeling, WV</span>
                                                     </p>
