--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1331,17 +1331,17 @@
                                                     </p>
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://www.beastoftheeast.org/" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
+                                                    <div class="fc-time mbl">3:30 pm</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />vs Midwest Marlins</span>
                                                     <p>
-                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                        <span class="fc-location mts">Garden Park</span>
                                                     </p>
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">6:00 pm</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />vs TBD</span>
                                                     <p>
-                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                        <span class="fc-location mts">Garden Park</span>
                                                     </p>
                                                 </a>
                                             </td>
@@ -1357,14 +1357,14 @@
                                                     <div class="fc-time mbl">10:30 pm</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />vs Ohio Bruisers Post 151</span>
                                                     <p>
-                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                        <span class="fc-location mts">Garden Park</span>
                                                     </p>
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">6:00 pm</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />vs Jr. Independent Players</span>
                                                     <p>
-                                                        <span class="fc-location mts">Garden Park Wheeling, WV</span>
+                                                        <span class="fc-location mts">Garden Park</span>
                                                     </p>
                                                 </a>
                                             </td>
