--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1355,7 +1355,7 @@
                                                 </a>
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/qopVhJEATvH2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">10:30 pm</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Ohio Bruisers Post 151</span>
+                                                    <span class="fc-title">Chillicothe Post 757 <br />vs Ohio Post 151</span>
                                                     <p>
                                                         <span class="fc-location mts">Garden Park</span>
                                                     </p>
