--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1050,14 +1050,14 @@
                                             </td>
                                             <td class="fc-event-container">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">5:00 pm</div>
+                                                    <div class="fc-time mbl">W 10-0</div>
                                                     <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">Game 2</div>
+                                                    <div class="fc-time mbl">W 11-1</div>
                                                     <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
@@ -1065,15 +1065,7 @@
                                                 </a>
                                             </td>
                                             <td></td>
-                                            <td class="fc-event-container">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />at Hillsboro Wood Bat</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Shaffer Park</span>
-                                                    </p>
-                                                </a>
-                                            </td>
+                                            <td></td> 
                                             <td class="fc-event-container">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl"></div>
