--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1049,14 +1049,14 @@
                                                 </a>
                                             </td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb608487d100205483d7" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">W 10-0</div>
                                                     <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb77a6a8ee001f5b71d1" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">W 11-1</div>
                                                     <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
                                                     <p>
