--- a/html/schedule.html
+++ b/html/schedule.html
@@ -851,47 +851,47 @@
                                                                 <table>
                                                                     <tbody>
                                                                         <tr>
-                                                                          <td class="fc-day fc-widget-content fc-sun" data-date="2018-05-06"></td>
-                                                                          <td class="fc-day fc-widget-content fc-mon" data-date="2018-05-07"></td>
-                                                                          <td class="fc-day fc-widget-content fc-tue" data-date="2018-05-08"></td>
-                                                                          <td class="fc-day fc-widget-content fc-wed" data-date="2018-05-09"></td>
-                                                                          <td class="fc-day fc-widget-content fc-thu" data-date="2018-05-10"></td>
-                                                                          <td class="fc-day fc-widget-content fc-fri" data-date="2018-05-11"></td>
-                                                                          <td class="fc-day fc-widget-content fc-sat" data-date="2018-05-12"></td>
-                                                                      </tr>
-                                                                  </tbody>
-                                                              </table>
-                                                          </div>
-                                                          <div class="fc-content-skeleton">
-                                                              <table>
-                                                                  <thead>
-                                                                      <tr>
-                                                                          <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-05-06">May 6</td>
-                                                                          <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-05-07">7</td>
-                                                                          <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-05-08">8</td>
-                                                                          <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-05-09">9</td>
-                                                                          <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-05-10">10</td>
-                                                                          <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-05-11">11</td>
-                                                                          <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-05-12">12</td>
-                                                                      </tr>
-                                                                  </thead>
-                                                                  <tbody>
-                                                                      <tr>
-                                                                          <td class="fc-event-container">
-                                                                              <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
-                                                                                  <div class="fc-time mbl">2:00 PM</div>
-                                                                                  <span class="fc-title">Mandatory Parent <br/>& Player Meeting</span>
-                                                                                  <p>
-                                                                                      <span class="fc-location mts">Hoffman Field</span>
-                                                                                  </p>
-                                                                              </a>
-                                                                          </td>
-                                                                          <td>OHSAA Sectionals</td>
-                                                                          <td>OHSAA Sectionals</td>
-                                                                          <td>OHSAA Sectionals</td>
-                                                                          <td>OHSAA Sectionals</td>
-                                                                          <td>OHSAA Sectionals</td>
-                                                                          <td></td>
+                                                                            <td class="fc-day fc-widget-content fc-sun" data-date="2018-05-06"></td>
+                                                                            <td class="fc-day fc-widget-content fc-mon" data-date="2018-05-07"></td>
+                                                                            <td class="fc-day fc-widget-content fc-tue" data-date="2018-05-08"></td>
+                                                                            <td class="fc-day fc-widget-content fc-wed" data-date="2018-05-09"></td>
+                                                                            <td class="fc-day fc-widget-content fc-thu" data-date="2018-05-10"></td>
+                                                                            <td class="fc-day fc-widget-content fc-fri" data-date="2018-05-11"></td>
+                                                                            <td class="fc-day fc-widget-content fc-sat" data-date="2018-05-12"></td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                            </div>
+                                                            <div class="fc-content-skeleton">
+                                                                <table>
+                                                                    <thead>
+                                                                        <tr>
+                                                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-05-06">May 6</td>
+                                                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-05-07">7</td>
+                                                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-05-08">8</td>
+                                                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-05-09">9</td>
+                                                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-05-10">10</td>
+                                                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-05-11">11</td>
+                                                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-05-12">12</td>
+                                                                        </tr>
+                                                                    </thead>
+                                                                    <tbody>
+                                                                        <tr>
+                                                                            <td class="fc-event-container">
+                                                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                                                    <div class="fc-time mbl">2:00 PM</div>
+                                                                                    <span class="fc-title">Mandatory Parent <br/>& Player Meeting</span>
+                                                                                    <p>
+                                                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                                                    </p>
+                                                                                </a>                                                                                
+                                                                            </td>
+                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container"></td>                                                                                                                                                       
                                                                         </tr>
                                         </tr>
                                     </tbody>
@@ -921,7 +921,6 @@
                                 <table>
                                     <thead>
                                         <tr>
-
                                             <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun fc-future" data-date="2017-06-04">4</td>
                                             <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon fc-future" data-date="2017-06-05">5</td>
                                             <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue fc-future" data-date="2017-06-06">6</td>
@@ -942,12 +941,12 @@
                                                     </p>
                                                 </a>
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-59349dc1ddbd0412fd000002/recap-story" target="_blank" data-original-title="" title="">
-                                                                                    <div class="fc-time mbl">W 7-6</div>
-                                                                                    <span class="fc-title">Utica Post 92<br />Chillicothe Post 757 </span>
-                                                                                    <p>
-                                                                                        <span class="fc-location mts">VA Memorial Stadium</span>
-                                                                                    </p>
-                                                                                </a>
+                                                    <div class="fc-time mbl">W 7-6</div>
+                                                    <span class="fc-title">Utica Post 92<br />Chillicothe Post 757 </span>
+                                                    <p>
+                                                        <span class="fc-location mts">VA Memorial Stadium</span>
+                                                    </p>
+                                                </a>
                                             </td>
                                             <td></td>
                                             <td class="fc-event-container">
@@ -1286,7 +1285,7 @@
                                                         <span class="fc-location mts">Wheeling, WV</span>
                                                     </p>
                                                 </a>
-                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/cXX7KySxKBP2" target="_blank" data-original-title="" title="">
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/cXX7KySxKBP2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">8:00 am</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />vs West Hills Baseball</span>
                                                     <p>
