--- a/html/schedule.html
+++ b/html/schedule.html
@@ -886,11 +886,11 @@
                                                                                     </p>
                                                                                 </a>                                                                                
                                                                             </td>
-                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
                                                                             <td class="fc-event-container"></td>                                                                                                                                                       
                                                                         </tr>
                                         </tr>
