--- a/html/schedule.html
+++ b/html/schedule.html
@@ -906,13 +906,13 @@
                                 <table>
                                     <tbody>
                                         <tr>
-                                            <td class="fc-day fc-widget-content fc-sun fc-future" data-date="2017-06-04"></td>
-                                            <td class="fc-day fc-widget-content fc-mon fc-future" data-date="2017-06-05"></td>
-                                            <td class="fc-day fc-widget-content fc-tue fc-future" data-date="2017-06-06"></td>
-                                            <td class="fc-day fc-widget-content fc-wed fc-future" data-date="2017-06-07"></td>
-                                            <td class="fc-day fc-widget-content fc-thu fc-future" data-date="2017-06-08"></td>
-                                            <td class="fc-day fc-widget-content fc-fri fc-future" data-date="2017-06-09"></td>
-                                            <td class="fc-day fc-widget-content fc-sat fc-future" data-date="2017-06-10"></td>
+                                            <td class="fc-day fc-widget-content fc-sun" data-date="2018-05-13"></td>
+                                            <td class="fc-day fc-widget-content fc-mon" data-date="2018-05-14"></td>
+                                            <td class="fc-day fc-widget-content fc-tue" data-date="2018-05-15"></td>
+                                            <td class="fc-day fc-widget-content fc-wed" data-date="2018-05-16"></td>
+                                            <td class="fc-day fc-widget-content fc-thu" data-date="2018-05-17"></td>
+                                            <td class="fc-day fc-widget-content fc-fri" data-date="2018-05-18"></td>
+                                            <td class="fc-day fc-widget-content fc-sat" data-date="2018-05-19"></td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -921,77 +921,24 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun fc-future" data-date="2017-06-04">4</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon fc-future" data-date="2017-06-05">5</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue fc-future" data-date="2017-06-06">6</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed fc-future" data-date="2017-06-07">7</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu fc-future" data-date="2017-06-08">8</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri fc-future" data-date="2017-06-09">9</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat fc-future" data-date="2017-06-10">10</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-05-13">13</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-05-14">14</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-05-15">15</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-05-16">16</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-05-17">17</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-05-18">18</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-05-19">19</td>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">Champions</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />Kickoff Klassic Tourney</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Chillicothe, OH</span>
-                                                    </p>
-                                                </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-59349dc1ddbd0412fd000002/recap-story" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">W 7-6</div>
-                                                    <span class="fc-title">Utica Post 92<br />Chillicothe Post 757 </span>
-                                                    <p>
-                                                        <span class="fc-location mts">VA Memorial Stadium</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            <td></td>
-                                            <td class="fc-event-container">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb10a6a8ee001f5b71cd" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">L 5-4</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />at Greenup County</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Greenup HS</span>
-                                                    </p>
-                                                </a>
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb3dc08689001a97af3b" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">W 11-7</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />at Greenup County</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Greenup HS</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb608487d100205483d7" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">W 10-0</div>
-                                                    <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Hoffman Field</span>
-                                                    </p>
-                                                </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-592dcb77a6a8ee001f5b71d1" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">W 11-1</div>
-                                                    <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Hoffman Field</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            <td></td>
-                                            <td></td>
-                                            <td class="fc-event-container">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />at Hillsboro Wood Bat</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Shaffer Park</span>
-                                                    </p>
-                                                </a>
-                                            </td>
+                                            <td class="fc-event-container"></td>
+                                            <td class="fc-event-container">OHSAA Districts</td>
+                                            <td class="fc-event-container">OHSAA Districts</td>
+                                            <td class="fc-event-container">OHSAA Districts</td>
+                                            <td class="fc-event-container">OHSAA Districts</td>
+                                            <td class="fc-event-container">OHSAA Districts</td>
+                                            <td class="fc-event-container">OHSAA Districts</td>
                                         </tr>
 
                                     </tbody>
