--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1402,7 +1402,7 @@
                                                         <div class="fc-time mbl"></div>
                                                         <span class="fc-title">Chillicothe Post 757 <br />at Ohio State Junior Tournament</span>
                                                         <p>
-                                                            <span class="fc-location mts">Lancaster, OH</span>
+                                                            <span class="fc-location mts">Lancaster, OHK</span>
                                                         </p>
                                                     </a>
                                                 </td>
