--- a/html/schedule.html
+++ b/html/schedule.html
@@ -912,7 +912,7 @@
                                             <td class="fc-day fc-widget-content fc-wed" data-date="2018-05-16"></td>
                                             <td class="fc-day fc-widget-content fc-thu" data-date="2018-05-17"></td>
                                             <td class="fc-day fc-widget-content fc-fri" data-date="2018-05-18"></td>
-                                            <td class="fc-day fc-widget-content fc-sat" data-date="2018-05-19"></td>
+                                            <td class="fc-day fc-widget-content fc-sat" data-date="2018-05-19">Test</td>
                                         </tr>
                                     </tbody>
                                 </table>
