--- a/html/schedule.html
+++ b/html/schedule.html
@@ -884,14 +884,14 @@
                                                                                     <p>
                                                                                         <span class="fc-location mts">Hoffman Field</span>
                                                                                     </p>
-                                                                                </a>
+                                                                                </a>                                                                                
                                                                             </td>
-                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA Sectionals</td>
-                                                                            <td class="fc-event-container"></td>
+                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
+                                                                            <td class="fc-event-container"></td>                                                                                                                                                       
                                                                         </tr>
                                         </tr>
                                     </tbody>
@@ -933,12 +933,12 @@
                                     <tbody>
                                         <tr>
                                             <td class="fc-event-container"></td>
-                                            <td class="fc-event-container">OHSAA Districts</td>
-                                            <td class="fc-event-container">OHSAA Districts</td>
-                                            <td class="fc-event-container">OHSAA Districts</td>
-                                            <td class="fc-event-container">OHSAA Districts</td>
-                                            <td class="fc-event-container">OHSAA Districts</td>
-                                            <td class="fc-event-container">OHSAA Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
                                         </tr>
 
                                     </tbody>
@@ -1402,7 +1402,7 @@
                                                         <div class="fc-time mbl"></div>
                                                         <span class="fc-title">Chillicothe Post 757 <br />at Ohio State Junior Tournament</span>
                                                         <p>
-                                                            <span class="fc-location mts">Lancaster, OHK</span>
+                                                            <span class="fc-location mts">Lancaster, OH</span>
                                                         </p>
                                                     </a>
                                                 </td>
