--- a/html/schedule.html
+++ b/html/schedule.html
@@ -886,11 +886,11 @@
                                                                                     </p>
                                                                                 </a>
                                                                             </td>
-                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
-                                                                            <td class="fc-event-container" align="center">OHSAA <br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA<br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA<br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA<br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA<br/>Sectionals</td>
+                                                                            <td class="fc-event-container" align="center">OHSAA<br/>Sectionals</td>
                                                                             <td class="fc-event-container"></td>
                                                                         </tr>
                                         </tr>
@@ -933,12 +933,12 @@
                                     <tbody>
                                         <tr>
                                             <td class="fc-event-container"></td>
-                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
-                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
-                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
-                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
-                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
-                                            <td class="fc-event-container" align="center">OHSAA <br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA<br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA<br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA<br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA<br/>Districts</td>
+                                            <td class="fc-event-container" align="center">OHSAA<br/>Districts</td>
+                                            <td class="fc-event-container"></td>
                                         </tr>
 
                                     </tbody>
@@ -953,13 +953,13 @@
                                 <table>
                                     <tbody>
                                         <tr>
-                                            <td class="fc-day fc-widget-content fc-sun" data-date="2017-06-11"></td>
-                                            <td class="fc-day fc-widget-content fc-mon" data-date="2017-06-12"></td>
-                                            <td class="fc-day fc-widget-content fc-tue" data-date="2017-06-13"></td>
-                                            <td class="fc-day fc-widget-content fc-wed" data-date="2017-06-14"></td>
-                                            <td class="fc-day fc-widget-content fc-thu" data-date="2017-06-15"></td>
-                                            <td class="fc-day fc-widget-content fc-fri" data-date="2017-06-16"></td>
-                                            <td class="fc-day fc-widget-content fc-sat" data-date="2017-06-17"></td>
+                                            <td class="fc-day fc-widget-content fc-sun" data-date="2018-05-21"></td>
+                                            <td class="fc-day fc-widget-content fc-mon" data-date="2018-05-22"></td>
+                                            <td class="fc-day fc-widget-content fc-tue" data-date="2018-05-23"></td>
+                                            <td class="fc-day fc-widget-content fc-wed" data-date="2018-05-24"></td>
+                                            <td class="fc-day fc-widget-content fc-thu" data-date="2018-05-25"></td>
+                                            <td class="fc-day fc-widget-content fc-fri" data-date="2018-05-26"></td>
+                                            <td class="fc-day fc-widget-content fc-sat" data-date="2018-05-27"></td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -968,60 +968,24 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun" data-date="2017-06-11">11</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon" data-date="2017-06-12">12</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue" data-date="2017-06-13">13</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2017-06-14">14</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu" data-date="2017-06-15">15</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri" data-date="2017-06-16">16</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat" data-date="2017-06-17">17</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-05-21">21</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-05-22">22</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-05-23">23</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-05-24">24</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-05-25">25</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-05-26">26</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-05-27">27</td>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="fc-event-container">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />at Hillsboro Wood Bat</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Shaffer Park</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">5:30 pm</div>
-                                                    <span class="fc-title">Portsmouth Post 23 <br />at Chillicothe Post 757</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Hoffman Field</span>
-                                                    </p>
-                                                </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">Game 2</div>
-                                                    <span class="fc-title">Portsmouth Post 23 <br />at Chillicothe Post 757</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Hoffman Field</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            <td></td>
-                                            <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">1:00 pm</div>
-                                                    <span class="fc-title">Jackson Post 81 <br />at Chillicothe Post 757</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Hoffman Field</span>
-                                                    </p>
-                                                </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">Game 2</div>
-                                                    <span class="fc-title">Jackson Post 81 <br />at Chillicothe Post 757</span>
-                                                    <p><span class="fc-location mts">Hoffman Field</span></p>
-                                                </a>
-                                            </td>
+                                            <td class="fc-event-container"></td>
+                                            <td class="fc-event-container" align="center"></td>
+                                            <td class="fc-event-container" align="center"></td>
+                                            <td class="fc-event-container" align="center"></td>
+                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals</td>
+                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals</td>
+                                            <td class="fc-event-container"></td>
                                         </tr>
                                     </tbody>
                                 </table>
